--- a/src/Navbar/Navbars.css
+++ b/src/Navbar/Navbars.css
@@ -47,7 +47,7 @@ top: 7px;
 color: #fff;
 text-decoration: none;
     list-style: none;
-    left: 13rem !important;
+    left: 13rem!important;
 }
 
 .app__navbar-links li {
@@ -108,6 +108,8 @@ text-decoration: none;
 
 .app__navbar-smallscreen_links {
     list-style: none;
+    position: relative;
+    right: 1rem;
 }
 
 .app__navbar-smallscreen_links .li {
