--- a/src/Navbar/Navbars.css
+++ b/src/Navbar/Navbars.css
@@ -89,7 +89,13 @@ text-decoration: none;
     left: 0;
     width: 100%;
     height: 100vh;
-    background: #000000eb;
+    background: rgba(20, 20, 20, 0.734);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
     transition: .5s ease;
 
 
