--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     background-color: #4a4a4a;
 }
 body{
-    background-color: black !important;
+    background-color: #0A0A0A !important;
     overflow-x: hidden;
   }
   @font-face {
@@ -60,7 +60,7 @@ background-position-x: center;
     display: flex;
     text-align: start;
     position: relative;
-    left: 10px;
+    left: 60px;
 }
 
 .right_footer_side{
@@ -69,7 +69,7 @@ background-position-x: center;
     display: flex;
     text-align: end;
     position: relative;
-    right:  10px;
+    right:  60px;
 }
 
 
@@ -275,11 +275,11 @@ height: 100% !important;
     background-clip: text;
     color: transparent;
     font-family: 'Syne', sans-serif !important;
-    font-size: 96px;
+    font-size: 80px;
     font-weight: 700;
     left: 0;
     letter-spacing: 0;
-    line-height: 104px;
+    line-height: 98px;
 
     text-align: center;
 
@@ -291,13 +291,13 @@ height: 100% !important;
     -webkit-text-fill-color: transparent;
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(206.13, 206.13, 206.13) 100%);
     background-clip: text;
-    color: transparent;
+    color: #fff !important;
     font-family: 'Syne', sans-serif !important;
-    font-size: 46px;
+    font-size: 54px;
     font-weight: 700;
     left: 0;
     letter-spacing: 0;
-    line-height: 74px;
+    line-height: 64px;
 
     text-align: center;
 
@@ -319,11 +319,11 @@ height: 100% !important;
    .subtextmm {
     color: var(--typography-colortext-02);
     font-family: 'MyCustomFont';
-    font-size: 15px;
-    font-weight: 400;
+    font-size: 18px;
+    font-weight: 200;
     left: 0;
     letter-spacing: 0;
-    line-height: 22px;
+    line-height: 24px;
     text-align: center;
 
     
@@ -341,7 +341,7 @@ height: 100% !important;
     
     color: #fff;
     font-family: 'Syne', sans-serif !important;
-    font-size: 30px;
+    font-size: 38px;
     font-weight: 700;
     left: 0;
     letter-spacing: 0;
@@ -452,7 +452,7 @@ img.vert-move {
     background-clip: text;
     color: transparent;
     font-family: 'Syne', sans-serif !important;
-    font-size: 66px;
+    font-size: 96px;
     font-weight: 700;
     left: 0;
     letter-spacing: 0;
@@ -467,7 +467,7 @@ img.vert-move {
    .subtexttab {
     color: var(--typography-colortext-02);
     font-family: 'MyCustomFont';
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 400;
     left: 0;
     letter-spacing: 0;
@@ -476,3 +476,96 @@ img.vert-move {
     top: 0;
     
    }
+
+
+   .opacity_for_cs{
+    color: #AFAFAF !important;
+    
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.ait{
+    -webkit-backdrop-filter: blur(23.86px) brightness(100%);
+    align-items: center;
+    backdrop-filter: blur(23.86px) brightness(100%);
+    background: linear-gradient(180deg, rgba(235, 254, 100, 0.03) 0%, rgba(140, 234, 105, 0.03) 100%);
+    border: 1.11px solid;
+    border-color: transparent;
+    border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) 1;
+    border-radius: 13.87px;
+    display: inline-flex;
+    flex-direction: column;
+    gap: 4.44px;
+    justify-content: center;
+    left: 1160px;
+    padding: 16px 32px;
+    position: absolute;
+    top: 404px;
+}   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.liqudity{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 2em;
+    left: 4em;
+}
+
+
+.ai_trad{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 25em;
+    left: 3em;
+}
+
+.trade_ai{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 4em;
+    left: 4em;
+}
+
+.dev_ai{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 26em;
+    left: 3em;
+}
